# screen-feedback-agent

./: .gitignore  README.md  pyproject.toml
docs/: BRIEF.md
docs/epics/: E1-audio-detection.md  E2-video-processing.md  E3-gemini-analysis.md  E4-cli-output.md  E5-clawdbot-integration.md  E6-enhanced-pipeline.md
docs/stories/: E1-S1-ffmpeg-silence-detection.md  E1-S2-whisper-transcription.md  E1-S3-segment-merger.md  E2-S1-segment-extraction.md  E2-S2-segment-concatenation.md  E2-S3-video-compression.md  E3-S1-gemini-video-upload.md  E3-S2-analysis-prompt-engineering.md  E3-S3-response-parsing.md  E4-S1-cli-framework.md  E4-S2-markdown-output-generator.md  E4-S3-progress-and-logging.md  E5-S1-clawdbot-skill-package.md  E5-S2-whatsapp-media-handler.md  E5-S3-response-formatting.md  E6-S1-improved-speech-detection.md  E6-S2-snap-keyword-screenshots.md  E6-S3-enhanced-prompt-detail.md
src/screen_feedback_agent/: __init__.py  audio.py  cli.py  config.py  gemini.py  output.py  pipeline.py  snapshots.py  video.py
tests/: __init__.py  test_audio.py  test_prompt.py  test_snapshots.py
